--- a/LabSession1_AppliedTimeSeries_Student.ipynb
+++ b/LabSession1_AppliedTimeSeries_Student.ipynb
@@ -762,7 +762,7 @@
     }
    ],
    "source": [
-    "sm.tsa.stattools.adfuller(np.ravel(ts1), regression='ct', autolag='BIC', store=False, regresults=True)"
+    "sm.tsa.stattools.adfuller(np.ravel(ts1), regression='n', autolag='BIC', store=False, regresults=True)"
    ]
   },
   {
@@ -787,7 +787,7 @@
     }
    ],
    "source": [
-    "sm.tsa.stattools.adfuller(np.ravel(ts2), regression='ct', autolag='BIC', store=False, regresults=True)"
+    "sm.tsa.stattools.adfuller(np.ravel(ts2), regression='c', autolag='BIC', store=False, regresults=True)"
    ]
   },
   {
@@ -812,7 +812,7 @@
     }
    ],
    "source": [
-    "sm.tsa.stattools.adfuller(np.ravel(ts3), regression='c', autolag='BIC', store=False, regresults=True)"
+    "sm.tsa.stattools.adfuller(np.ravel(ts3), regression='ct', autolag='BIC', store=False, regresults=True)"
    ]
   },
   {
@@ -837,7 +837,7 @@
     }
    ],
    "source": [
-    "sm.tsa.stattools.adfuller(np.ravel(ts3), regression='ct', autolag='BIC', store=False, regresults=True)"
+    "sm.tsa.stattools.adfuller(np.ravel(ts3), regression='ctt', autolag='BIC', store=False, regresults=True)"
    ]
   },
   {
