--- a/LabSession1_AppliedTimeSeries_Student.ipynb
+++ b/LabSession1_AppliedTimeSeries_Student.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -115,10 +115,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1f13ca97890>]"
+       "[<matplotlib.lines.Line2D at 0x259c1b266d0>]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -178,16 +178,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1f144541850>]"
+       "[<matplotlib.lines.Line2D at 0x259c2770d90>]"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -221,16 +221,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1f1445ad910>]"
+       "[<matplotlib.lines.Line2D at 0x259c1e12a50>]"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 9,
    "metadata": {
     "scrolled": false
    },
@@ -272,10 +272,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1f14454dd50>]"
+       "[<matplotlib.lines.Line2D at 0x259c2735910>]"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -357,7 +357,7 @@
        "np.float64(21.310782263903715)"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
        "array([28.41198058, 31.41043284, 37.56623479])"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,7 +548,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1. , -0.7])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -570,16 +590,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1f139eb2150>]"
+       "[<matplotlib.lines.Line2D at 0x259c20a2c90>]"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -600,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
@@ -742,21 +762,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(np.float64(-0.9092378829768902),\n",
-       " np.float64(0.955156024828748),\n",
-       " {'1%': np.float64(-3.967860781661831),\n",
-       "  '5%': np.float64(-3.4148938944043334),\n",
-       "  '10%': np.float64(-3.1296421434972537)},\n",
-       " <statsmodels.stats.diagnostic.ResultsStore at 0x1f13e86d950>)"
+       "(np.float64(-0.5204259145940303),\n",
+       " np.float64(0.48770975047827364),\n",
+       " {'1%': np.float64(-2.5679816723029334),\n",
+       "  '5%': np.float64(-1.9412722092921209),\n",
+       "  '10%': np.float64(-1.6165568281300424)},\n",
+       " <statsmodels.stats.diagnostic.ResultsStore at 0x259c23f7790>)"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,21 +787,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(np.float64(-3.112875939023983),\n",
-       " np.float64(0.10320037961167011),\n",
-       " {'1%': np.float64(-3.967860781661831),\n",
-       "  '5%': np.float64(-3.4148938944043334),\n",
-       "  '10%': np.float64(-3.1296421434972537)},\n",
-       " <statsmodels.stats.diagnostic.ResultsStore at 0x1f144606550>)"
+       "(np.float64(-0.91945422543702),\n",
+       " np.float64(0.7814983731963208),\n",
+       " {'1%': np.float64(-3.4369127451400474),\n",
+       "  '5%': np.float64(-2.864437475834273),\n",
+       "  '10%': np.float64(-2.568312754566378)},\n",
+       " <statsmodels.stats.diagnostic.ResultsStore at 0x259c238dd50>)"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,32 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(np.float64(-0.14659944866464808),\n",
-       " np.float64(0.9445946647957297),\n",
-       " {'1%': np.float64(-3.4369391965679257),\n",
-       "  '5%': np.float64(-2.86444914142694),\n",
-       "  '10%': np.float64(-2.5683189679553546)},\n",
-       " <statsmodels.stats.diagnostic.ResultsStore at 0x1f13cacd950>)"
-      ]
-     },
-     "execution_count": 133,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sm.tsa.stattools.adfuller(np.ravel(ts3), regression='ct', autolag='BIC', store=False, regresults=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -828,10 +823,35 @@
        " {'1%': np.float64(-3.967860781661831),\n",
        "  '5%': np.float64(-3.4148938944043334),\n",
        "  '10%': np.float64(-3.1296421434972537)},\n",
-       " <statsmodels.stats.diagnostic.ResultsStore at 0x1f13cbc4390>)"
+       " <statsmodels.stats.diagnostic.ResultsStore at 0x259c26f42d0>)"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sm.tsa.stattools.adfuller(np.ravel(ts3), regression='ct', autolag='BIC', store=False, regresults=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(-13.510660695808864),\n",
+       " np.float64(4.57907708296395e-22),\n",
+       " {'1%': np.float64(-4.382766025596549),\n",
+       "  '5%': np.float64(-3.8383142452686947),\n",
+       "  '10%': np.float64(-3.5569286306152224)},\n",
+       " <statsmodels.stats.diagnostic.ResultsStore at 0x259c2055110>)"
+      ]
+     },
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -912,10 +932,10 @@
        " {'1%': np.float64(-3.4369193380671),\n",
        "  '5%': np.float64(-2.864440383452517),\n",
        "  '10%': np.float64(-2.56831430323573)},\n",
-       " <statsmodels.stats.diagnostic.ResultsStore at 0x1f13a3abb10>)"
+       " <statsmodels.stats.diagnostic.ResultsStore at 0x259c4c78290>)"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -937,10 +957,10 @@
        " {'1%': np.float64(-2.5680066711059024),\n",
        "  '5%': np.float64(-1.941275277210917),\n",
        "  '10%': np.float64(-1.6165539281170966)},\n",
-       " <statsmodels.stats.diagnostic.ResultsStore at 0x1f13a2e8b90>)"
+       " <statsmodels.stats.diagnostic.ResultsStore at 0x259c4d4fa10>)"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -962,10 +982,10 @@
        " {'1%': np.float64(-3.4369193380671),\n",
        "  '5%': np.float64(-2.864440383452517),\n",
        "  '10%': np.float64(-2.56831430323573)},\n",
-       " <statsmodels.stats.diagnostic.ResultsStore at 0x1f13e414350>)"
+       " <statsmodels.stats.diagnostic.ResultsStore at 0x259c27713d0>)"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -987,10 +1007,10 @@
        " {'1%': np.float64(-3.4369391965679257),\n",
        "  '5%': np.float64(-2.86444914142694),\n",
        "  '10%': np.float64(-2.5683189679553546)},\n",
-       " <statsmodels.stats.diagnostic.ResultsStore at 0x1f13c840d90>)"
+       " <statsmodels.stats.diagnostic.ResultsStore at 0x259c4cff350>)"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1001,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1027,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1072,10 +1092,10 @@
        " {'1%': np.float64(-3.4369127451400474),\n",
        "  '5%': np.float64(-2.864437475834273),\n",
        "  '10%': np.float64(-2.568312754566378)},\n",
-       " <statsmodels.stats.diagnostic.ResultsStore at 0x1f13de1d6d0>)"
+       " <statsmodels.stats.diagnostic.ResultsStore at 0x259c21708d0>)"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1086,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1097,10 +1117,10 @@
        " {'1%': np.float64(-3.4369127451400474),\n",
        "  '5%': np.float64(-2.864437475834273),\n",
        "  '10%': np.float64(-2.568312754566378)},\n",
-       " <statsmodels.stats.diagnostic.ResultsStore at 0x1f13ca5d950>)"
+       " <statsmodels.stats.diagnostic.ResultsStore at 0x259c4bda5d0>)"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -1124,10 +1144,10 @@
        " {'1%': np.float64(-3.4369127451400474),\n",
        "  '5%': np.float64(-2.864437475834273),\n",
        "  '10%': np.float64(-2.568312754566378)},\n",
-       " <statsmodels.stats.diagnostic.ResultsStore at 0x1f13ddcc410>)"
+       " <statsmodels.stats.diagnostic.ResultsStore at 0x259c1dacf10>)"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1153,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 38,
    "metadata": {
     "scrolled": false
    },
@@ -1164,7 +1184,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     },
