--- a/ex4.ipynb
+++ b/ex4.ipynb
@@ -198,7 +198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We observe some seasonality, approximately every 252 days"
+    "We observe no significant seasonality as per expected"
    ]
   },
   {
